assets/themes/red.css
.aside-menu
  .menu-nav
  > .menu-item:not(.menu-item-parent):not(.menu-item-open):not(
    .menu-item-here
  ):not(.menu-item-active):hover
  .menu-heading
  .menu-text,
.aside-menu
  .menu-nav
  > .menu-item:not(.menu-item-parent):not(.menu-item-open):not(
    .menu-item-here
  ):not(.menu-item-active):hover
  .menu-link
  .menu-text {
  color: #df1212 !important;
}
.text-right {
  text-align: right !important;
  color: #4d4d4d;
}
.table th,
.table td {
  vertical-align: middle;
}
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-heading .menu-text,
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-link .menu-text {
  color: #df1212 !important;
}
.aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
.aside-menu .menu-nav > .menu-item > .menu-link .menu-text {
  color: #4d4d4d;
}
.form-control:focus {
  border-color: #df1212;
  border-width: 2px;
}
.text-primary {
  color: #df1212 !important;
  font-weight: 500;
}
.bg-primary {
  background-color: #b7140f !important;
}
a.text-primary:hover,
a.text-primary:focus {
  color: #df1212 !important;
}
.text-dark-50 {
  color: #5c5c5c !important;
}
.text-dark {
  color: #2a2a2a;
}
.navi .navi-item .navi-link.active .navi-text {
  color: #df1212 !important;
}
.symbol.symbol-light-primary .symbol-label {
  background-color: #ffe1e1;
  color: #df1212;
}
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-heading .menu-icon,
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-link .menu-icon {
  color: #df1212;
}
.aside-menu
  .menu-nav
  > .menu-item:not(.menu-item-parent):not(.menu-item-open):not(
    .menu-item-here
  ):not(.menu-item-active):hover
  > .menu-heading
  .menu-icon,
.aside-menu
  .menu-nav
  > .menu-item:not(.menu-item-parent):not(.menu-item-open):not(
    .menu-item-here
  ):not(.menu-item-active):hover
  > .menu-link
  .menu-icon {
  color: #df1212 !important;
}
.table th,
.table td {
  vertical-align: middle;
  font-weight: 500;
}
@media (min-width: 992px) {
  .header .header-menu .menu-nav > .menu-item.menu-item-here > .menu-link,
  .header .header-menu .menu-nav > .menu-item.menu-item-active > .menu-link {
    background-color: #631515;
  }
}
@media (min-width: 992px) {
  .brand .btn .svg-icon svg g [fill] {
    fill: #ffffff;
  }
}
.navi .navi-item .navi-link:hover .navi-text {
  color: #df1212 !important;
}
.topbar .btn.btn-icon:active,
.topbar .btn.btn-icon.active,
.topbar .btn.btn-icon:hover,
.topbar .btn.btn-icon:focus,
.topbar .show .btn.btn-icon.btn-dropdown {
  background-color: #a50606 !important;
  border-radius: 50px !important;
}
a.text-hover-primary:hover,
.text-hover-primary:hover {
  color: #df1212 !important;
}
.btn-link:hover {
  color: #df1212;
  text-decoration: underline;
}
.fc-unthemed .fc-toolbar .fc-button:focus,
.fc-unthemed .fc-toolbar .fc-button:active,
.fc-unthemed .fc-toolbar .fc-button.fc-button-active {
  background: #df1212 !important;
  color: #ffffff;
  border: 1px solid #df1212 !important;
}
@media (min-width: 992px) {
  .brand .btn.active .svg-icon svg g [fill],
  .brand .btn:hover .svg-icon svg g [fill] {
    fill: #ffffff;
  }
}
.btn.btn-light-primary:hover:not(.btn-text):not(:disabled):not(.disabled),
.btn.btn-light-primary:focus:not(.btn-text),
.btn.btn-light-primary.focus:not(.btn-text) {
  color: #ffffff;
  background-color: #df1212;
  border-color: transparent;
}
.navi .navi-item .navi-link.active .navi-icon i {
  color: #df1212;
}
.navi .navi-item .navi-link:hover .navi-icon i {
  color: #df1212;
}
a {
  font-weight: 600;
}
span.text-dark-50.font-weight-bolder.font-size-base.d-none.d-md-inline.mr-3 {
  color: #fff !important;
}
.card-body > span {
  font-size: 18px;
  color: black;
  font-weight: bold;
  margin-left: 4px;
}
.scrolltop {
  background-color: #9d0c09;
}
[class*="card card-custom mb-5"] [class*="card-body"] {
  display: grid;
  gap: 2px;
}
.page-loader.page-loader-logo {
  background-color: #900f0b !important;
}

.symbol.symbol-120.symbol-success.overflow-hidden {
  border: 4px solid #e5e5e5;
  border-radius: 60%;
}
body {
  background: #ffffff;
}
.aside .aside-menu.ps > .ps__rail-y > .ps__thumb-y:hover,
.aside .aside-menu.ps > .ps__rail-y > .ps__thumb-y:focus {
  background: #900f0b !important;
}
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-heading,
.aside-menu .menu-nav > .menu-item.menu-item-active > .menu-link {
  background-color: #ffffff;
}
.symbol.symbol-success .symbol-label {
  background-color: #d7d7d7;
  color: #ffffff;
}
.header-var1 .logo-wrapper img {
  filter: brightness(10);
}
.home-table > li span {
  background-color: #7c1715;
  text-align: center;
}
.home-table > li .before-bg {
  height: 230px;
  border: 2px solid #d3d3d3;
}
.home-table > li ul {
  border: 0;
}
.home-table {
  padding: 0 !important;
}
.btn {
  border: 2px solid transparent;
}
.btn-default:hover {
  background: #931d1d !important;
  border: 2px solid #6f1a17 !important;
  color: white;
}
.btn-success {
  background: #289728 !important;
  border: 2px solid #289728 !important;
}
.btn.btn-secondary {
  border: 0 !important;
}
.btn-success:hover {
  background: #089d08 !important;
  border: 2px solid #289728 !important;
}
.btn-default,
.btn-primary,
.btn-success,
.btn-info,
.btn-warning,
.btn-danger {
  text-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.btn-default {
  border: 2px solid #eee !important;
  background: #f5f5f5 !important;
}
small i {
  color: white;
}
.nav-collapse ul li a {
  color: #ffffff;
}
.header-var1 nav > ul > li > a:hover {
  color: #c5c5c5;
}
.home-table {
  background-color: #ffffff;
}
.footer-fluid {
  display: none;
}
.contact-container {
  padding: 10px 0px 0px 0px !important;
  margin: 0 !important;
}
/* ... */

